CRUD Stock Movement

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.datasource.username=postgres
 spring.datasource.password=226085
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql= true
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.mail.yahoo.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=rodrigojornooki@yahoo.com
+spring.mail.password=258852asd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true 
 
