--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,10 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql= true
 spring.mail.host=smtp.mail.yahoo.com
 spring.mail.port=587
-spring.mail.username=rodrigojornooki@yahoo.com
-spring.mail.password=258852asd
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true 
-
-
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.username=sa
