--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+logging.level.org.springframework.web=off
+logging.level.springframework.controllers=DEBUG
+logging.level.org.hibernate=ERROR
+logging.file.name=logs/sibs.log
 
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.username=sa
